--- a/mtbookshop/grails-app/conf/application.yml
+++ b/mtbookshop/grails-app/conf/application.yml
@@ -105,7 +105,7 @@ dataSource:
     driverClassName: org.h2.Driver
     username: sa
     password:
-    configClass: org.grails.plugin.hibernate.filter.HibernateFilterDomainConfiguration.class
+    configClass: org.grails.plugin.hibernate.filter.HibernateFilterDomainConfiguration
 
 environments:
     development:
